[metadata]
name = async_crypto_pay_api_sdk
version = 1.1.0
author = Aicorelz
url = https://github.com/aicorelz/async-crypto-pay-api-sdk
description = API for CryptoBot 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    
project_urls = 
    Bug Tracker = https://github.com/sllavon/crypto-pay-api-sdk/issues

[options]
pakage_dir =
    = async_crypto_pay
packages = find: 
python_requires = >= 3.6
[options.packages.find]
where = async_crypto_pay
